# deeplabv3plus_ncnn

./: README.md
version2/: settings.gradle
version2/app/: build.gradle
version2/app/src/main/: AndroidManifest.xml
version2/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
version2/app/src/main/java/com/example/version2/: Deeplabv3plusNcnn.java  MainActivity.java
version2/app/src/main/res/layout/: activity_main.xml
version2/gradle/wrapper/: gradle-wrapper.properties
